# bevy_stimulus

./: Cargo.toml  Stimulus.toml
bevy_stimulus_derive/: Cargo.toml
bevy_stimulus_derive/src/: lib.rs
examples/: deserialize.rs  serialize.rs  simple.rs
src/: lib.rs
src/stimulus/: action.rs  mod.rs  scheme.rs  stimuli.rs
